# deadline-cloud-for-vred

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  hatch.toml  hatch_custom_hook.py  pyproject.toml  python-sandbox-module-allowlist.txt  requirements-testing.txt  requirements-unit-testing.txt  requirements-worker-testing.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: build_installers.yml  code_quality.yml  release_publish.yml  responded.yml  stale_prs_and_issues.yml
install_builder/: deadline-cloud-for-vred.xml
installer/: DeadlineCloudForVREDSubmitter.xml
scripts/: build_wheels.sh  create_adaptor_packaging_artifact.sh  deps_bundle.py
src/deadline/vred_submitter/: VREDLogger.py  VRED_RenderScript_DeadlineCloud.py  _version.py  assets.py  constants.py  data_classes.py  default_vred_job_template.yaml  qt_components.py  qt_utils.py  scene.py  utils.py  vred_logger.py  vred_submitter.py  vred_utils.py
src/deadline/vred_submitter/ui/components/: constants.py  scene_settings_callbacks.py  scene_settings_populator.py  scene_settings_widget.py
test/: load_render_parameter_values.py  output_comparison.py  run-tile-assember-tests.bat  run-vred-render-tests.bat  test_copyright_headers.py  tile_assembler_test.py  vred_render_test.py
test/configurations/: 1.json  tiles.json
test/installer/: test_installer.py
test/integ/: README.md  constants.py  output_comparison.py  path_resolver.py  sticky_settings_verification.py  submitter_dialog_controller.py  test_vred_submitter.py
test/integ/expected_output/Cone-7x5_tiles/: asset_references.yaml  parameter_values.yaml
test/integ/expected_output/FileReferencing-bundle_comparison/: asset_references.yaml
test/integ/expected_output/LightweightWith Spaces-basic_render/: asset_references.yaml
test/output/: README.txt
test/unit/: README.md  conftest.py  requirements.txt  run-unit-tests.bat  run-unit-tests.sh  test_assets.py  test_data_classes.py  test_qt_components.py  test_qt_utils.py  test_scene.py  test_ui_components_scene_settings_callbacks.py  test_ui_components_scene_settings_populator.py  test_ui_components_scene_settings_widget.py  test_utils.py  test_vred_logger.py  test_vred_render_script.py  test_vred_submitter.py  test_vred_utils.py
test/worker/: README.md  __init__.py  constants.py  load_render_parameter_values.py  output_comparison.py  path_resolver.py  run-tile-assembler-tests.bat  run-tile-assembler-tests.sh  run-vred-render-tests.bat  run-vred-render-tests.sh  test_tile_assembler.py  test_vred_render.py  tile_assembler_test.py  vred_render_test.py
test/worker/job_bundles/5x2_tiles/: asset_references.yaml  parameter_values.yaml
test/worker/job_bundles/7x5_tiles/: parameter_values.yaml
test/worker/job_bundles/one_frame/: parameter_values.yaml  template.yaml
test/worker/scene_files/: test.wire
vred_submitter_plugin/plug-ins/: DeadlineCloudForVRED.py
